# advent-of-code-2025

./: README.md
input/: day01
rust/: Cargo.toml  benchmark.sh  run.sh  test.sh
rust/src/: lib.rs
rust/template/: day.rs  mkday.sh
